# lockhtml

./: .gitignore  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-docs.yml  publish.yml
docs/: cli-reference.md  configuration.md  faq.md  getting-started.md  index.md  security.md  use-cases.md
examples/: README.md  blog.html  dashboard.html  research-group.html  simple.html  test.md  when-simpler-is-better.html
src/lockhtml/: __init__.py  cli.py  config.py  crypto.py  parser.py  template.py  wrap.py
src/pagevault/: __init__.py  cli.py  config.py  crypto.py  parser.py  template.py  wrap.py
src/pagevault/viewers/: __init__.py  base.py  builtin.py  registry.py
src/pagevault/viewers/builtins/: __init__.py  audio.py  html.py  image.py  markdown.py  pdf.py  text.py  video.py
templates/: lockhtml.css  lockhtml.js
tests/: __init__.py  test_cli.py  test_config.py  test_crypto.py  test_integration.py  test_parser.py  test_template.py  test_unified_lock.py  test_viewers.py  test_wrap.py
