[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pagevault"
version = "0.2.0"
description = "Password-protect regions of HTML files for static hosting"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Alexander Towell", email = "lex@metafunctor.com" },
    { name = "Alex Towell", email = "queelius@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Security :: Cryptography",
]
keywords = ["html", "encryption", "static-site", "password-protection"]
dependencies = [
    "click>=8.0",
    "cryptography>=41.0",
    "beautifulsoup4>=4.12",
    "pyyaml>=6.0",
    "lxml>=4.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]

[project.entry-points."pagevault.viewers"]
image = "pagevault.viewers.builtin:ImageViewer"
pdf = "pagevault.viewers.builtin:PdfViewer"
html = "pagevault.viewers.builtin:HtmlViewer"
text = "pagevault.viewers.builtin:TextViewer"
markdown = "pagevault.viewers.builtin:MarkdownViewer"

[project.scripts]
pagevault = "pagevault.cli:main"

[project.urls]
Homepage = "https://github.com/queelius/pagevault"
Repository = "https://github.com/queelius/pagevault"

[tool.hatch.build.targets.wheel]
packages = ["src/pagevault"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
# parser.py, wrap.py, and builtin.py contain inline JS/CSS that can't be line-wrapped
"src/pagevault/parser.py" = ["E501"]
"src/pagevault/wrap.py" = ["E501"]
"src/pagevault/viewers/builtin.py" = ["E501"]

[tool.coverage.run]
source = ["src/pagevault"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
